# ExtreM_z

./: CMakeLists.txt  ExtreMzConfig.cmake.in  build.sh  main.cpp
include/api/: ExtreM.h
src/: .ExtreM_cuda.cu.swp  ExtreM.cpp  ExtreM_cuda.cu  ExtreM_cuda1.cu  ExtreM_cuda_copy.cu  ExtreM_cuda_f.cu  ExtreM_distributed  UnionFind.h  bounds.txt  distributed_ExtreM.cu  job_output_37905051.txt  run.sh  run.slurm  tmp.cpp
